<resources>
    <string name="app_name">Catbook</string>
    <string name="key_name">name</string>
    <string name="catbook_title">catbook</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_button_text">Start your story</string>
    <string name="story_image_content_description">Story page image</string>
    <string name="next_chapter">Next chapter</string>
    <string name="enter_your_guess">Enter your guess</string>
    <string name="enter_guess">Enter guess</string>
    <string name="page0">It\'s morning. You wake up and stretch your skinny paws. Your pretty fur is a bit fuzzy from sleeping, so you wash it until it looks fabulous again. It is almost dawn and your human is still asleep… When will he learn…?\n\nTrain your human to wake up when it\'\s time for breakfast, not when the black box next to his nest starts beeping.\n\nBelow are several training methods. Some methods are more effective than others and you may have to repeat them. But watch out not to push it too hard or the human might throw you out of the room and you will have to wait another century before he comes down for breakfast. Try a method and see how the human reacts to it.</string>
    <string name="page0_25points">The human stirs and turns on his other side. Keep going.</string>
    <string name="page0_50points">The human mumbles something to you, but is not getting out of his nest yet. Try again, but watch out not to annoy him.</string>
    <string name="page0_75points">The human sighs. Just one more little push.</string>
    <string name="page0_100points">The human submits. Somewhat slow he walks down with you to the kitchen.</string>
    <string name="page0_over_100points">You pushed it too hard. The human gets out of his nest, picks you up and throws you out of the room. Now you\'ll have to wait until he gets out on his own time.</string>
    <string name="page0_choice1">Sit on the human\'s face</string>
    <string name="page0_choice2">\'Boop\' his nose</string>
    <string name="page0_choice3">Meow loud and non-stop</string>
    <string name="page0_choice4">Put on your cute face and purr</string>
    <string name="page1">The human gives you your breakfast. As you eat, you see him mindlessly staring in front of him for a few seconds before he walks away and goes about his business.\n\nAfter breakfast you decide to go for a morning walk, using the little cat door. You convinced the human to install it a week ago by scratching the human door multiple times. Humans are slow learners. He\'s lucky to have you.\n\nAs you walk around in your kingdom you enjoy the smell of the spring flowers and the sounds of food flying around. Suddenly you see another cat. You don\'t know this one and he\'s in your territory. What do you do?</string>
    <string name="page2">After what seems like ages the human finally comes out of his room. You meow as loud as you can at him and he follows you to the kitchen where he gives you your food.\n\nAfter breakfast you decide to go for a morning walk, using the little cat door. You convinced the human to install it a week ago by scratching the human door multiple times. Humans are slow learners. He\'s lucky to have you.\n\nAs you walk around in your kingdom you enjoy the smell of the spring flowers and the sounds of food flying around. Suddenly you see another cat. You don\'t know this one and he\'s in your territory. What do you do?</string>
    <string name="page1_1">You sit down and blink to the cat as a sign of kindness. The cat blinks back to you and slowly walks your way. The two of you sniff each other. \"My name is Snuggles\", says the cat.\nYou: \"My name is %1$s.\"\nSnuggles: \"Nice to meet you, %1$s! I just moved here with my humans. I don\'t know this place very well yet. Could you show me around?\"</string>
    <string name="page1_2">You curl your back and hiss. The strange cat looks at you and… blinks. He walks towards you a few steps and lets himself fall to the ground. He keeps blinking and says: \"Hello, I\'m Snuggles. Who are you?\"</string>
    <string name="page1_3">You: \"Alright, Snuggles. Follow me and feast your eyes!\"</string>
    <string name="page1_4">Snuggles: \"Alright, see you later then!\"\nYou: \"Goodbye, Snuggles!\"\n\nYou\'re happy you made a new friend. It\'s good to have allies.</string>
    <string name="page1_5">You: \"Hello Snuggles, my name is %1$s\"\nSnuggles: \"Nice to meet you, %1$s! I just moved here with my humans.\"\nYou: \"Nice to meet you too. I\'m sorry for starting off like that.\"\nSnuggles: \"I understand. Some cats these days, right…\"\nYou: \"Totally…\"\nSnuggles: \"I don\'t know this place very well yet. Could you show me around?\"</string>
    <string name="page1_6">You run towards Snuggles and scratch him on his nose. Snuggles jumps up and hisses at you. \n\"Are you mad?!\" he meows, and as he runs away he yells: \"You will regret this!\"</string>
    <string name="page1_choice1">Try to befriend him</string>
    <string name="page1_choice2">He\'s an intruder in your kingdom! Chase him away!</string>
    <string name="page1_choice1_1">Sure, follow me</string>
    <string name="page1_choice2_1">No, maybe some other time</string>
    <string name="page1_choice1_2">You calm down. Maybe he\'s not so bad. You tell him your name.</string>
    <string name="page1_choice2_2">It\'s a trap! You keep hissing and then attack him.</string>
    <string name="page3">You take Snuggles with you for a walk through your kingdom. You both climb up a fence so you can see the surroundings.\n\nYou: \"Look Snuggles, everything the light touches is my kingdom.\"\nSnuggles: \"Wow!\"\nYou: \"Behind us is the park, where you can find all sorts of snacks and toys to play with. In front of us you can see my house at the corner. Where is yours?\"\nSnuggles: \"It\'s just opposite your house! Wait, what about that shadowy place over there?\"\nYou: \"That\'s beyond my borders. You must never go there, Snuggles!\"\nSnuggles: \"Why?\"\nYou: \"Something evil lurks there in the dark. My nemesis. His name is \'Lucky\'. Don\'t be fooled by the name though. If he catches you, you\'re dog food.\"\nSnuggles: \"Noted, I\'ll stay away from that place.\"\nYou: \"Good.\"\nSnuggles: \"Would you like to see my house? I\'ll introduce you to my humans.\"</string>
    <string name="page3_1">Snuggles leads you to his place. Through the backyard you reach the door. Snuggles also has a cat door. Snuggles goes in first. You stick your head through the door and look around.\nSnuggles: \"It\'s alright, come in\"\nYou get in. You\'re in the kitchen where Snuggles has his water and food. There\'s a little left.\nSnuggles: \"You can eat that if you want. It\'s fish!\"</string>
    <string name="page3_2">Snuggles: \"Alright, see you later then!\"\nYou: \"Goodbye, Snuggles!\"\n\nYou\'re happy you made a new friend. It\'s good to have allies.</string>
    <string name="page3_3">You eat the food. It\'s delicious! You have to convince your human to get this for you as well. Suddenly one of Snuggles\' humans walks into the kitchen and sees you eat. It\'s a female. She calls out something and the male human walks in. He yells: \"Snuggles!\"\n\nThe male walks towards you and waves his hands, forcing you to the door.\nSnuggles: \"I\'m sorry, I don\'t think he likes you very much. You should probably go. I\'ll talk to my humans.\"\nYou nod and run back outside. As you look back you see the male looking at you through the window before turning away. Humans are weird! But you\'ll be back and they will learn to love you!</string>
    <string name="page3_4">Snuggles: \"Alright. Come, let\'s find my humans.\"\nAs you walk through the house you see a lot of boxes. Heaven! Then you see them. They are a male and a female human and they are taking things out of the boxes and putting it at random places in the room.\nSnuggles: \"Humans! Look, I brought my new friend!\"\nMale human: \"Ah, Snuggles!\"\nThe female says something to him in human speak and then walks over to you saying words in a soft voice. You only understand the word \'cute\'. She pets you and you purr in response. The male doesn\'t seem to like you very much, but submits to the female\'s command.\nThe female picks you up. You don\'t really like it when humans do that, but you let her. She walks you to the front door and puts you outside.\nSnuggles follows her: \"I\'m sorry for my male human, he doesn\'t seem to enjoy the company of other cats a lot.\"\nYou: \"That\'s ok, I like your female human.\"\nSnuggles: \"She likes you too! Listen, I think my humans need help with the boxes and all their stuff. So I\'ll see you around later.\"\nYou: \"Alright, see you Snuggles!\"</string>
    <string name="page3_choice1">Sure, let\'s go</string>
    <string name="page3_choice2">No thank you, maybe some other time</string>
    <string name="page3_choice1_1">Eat the food</string>
    <string name="page3_choice2_1">No thanks, I\'ll pass</string>
    <string name="page4">You continue your walk through your kingdom. It\'s nice and sunny. As you sniff in the fresh air, you hear something move under a bush behind you. You slowly walk to the bush to check it out.\nSuddenly, someone jumps out and yells at you. You jump back and give a loud hiss. Then you see it\'s Puddles, the stray cat. He\'s your friend… but not very right in the head.\n\nYou: \"Oh… Hello, Puddles. You startled me! Don\'t do that again!\"\nPuddles: \"Sorry, bro! I thought you was a thief who was out for ma loot.\"\nYou: \"Your loot? What have you got there?\"\nYou try to see what\'s in the bushes behind Puddles.\nPuddles: \"No, you can\'t see it! It\'s mine!\"\nYou: \"Oh, come on! Don\'t be a kitten. Just let me see.\"\nPuddles: \"No!\"\n\nAs you try to move past Puddles he keeps blocking your way. You then take a few steps back and initiate a staring contest. Puddles tries, but within a minute he looks away.\nPuddles: \"Damn! OK, tell you what, bro: if you can guess what I got under this bush, you can see it. Deal?\"\n\nEnter whatever you think Puddles has hidden under the bush and hit the Enter button to guess. If you grow tired of Puddles\' guessing game, go to the next chapter.</string>
    <string name="key_guess">Guess</string>
    <string name="page4_1">Puddles: \"Yes!\"\nPuddles turns around and takes the %1$s out.\nPuddles: \"Guess again!\"</string>
    <string name="page4_2">Puddles: \"No! You guessed wrong! Try again!\"</string>
    <string name="page4_3">You already guessed that item. Try something else.</string>
    <string name="page4_4">Puddles: \"Yes!\"\nPuddles turns around and takes the %1$s out.\nPuddles: \"You guessed all my items! Sure you didn\'t peek?\"</string>
    <string name="page5">Leaving Snuggles\' house behind, you make your way into the park across the road. This is the best place of your kingdom. It\'s filled with bushes to hide under, trees to climb in and there\'s snacks everywhere.\n\nYou think about what happened yesterday. Your girlfriend and you had a little fight. You should probably make things right with her. You know she loves a snack, but what will you catch her?\n\nShe likes birds best. Easy to find, but hard to catch.\nMice are her second-best favorite snack. They are hard to find at daylight and tricky to catch.\nButterflies are her third-best favorite. Not that hard to find and easier to catch than mice.\nSpiders are a little tricky to find, but a very easy catch. Spiders are also a nice snack, but girlfriend prefers the others. You think it\'s the web-like taste of them…\n\nAnyway, let\'s find her a nice snack! And be lucky to catch it!</string>
</resources>